# FructermanReingoldCPP

./: CMakeLists.txt  README.md  fructermanreingold.cpp  fructermanreingold.h  liboptions.cpp  liboptions.hpp  main.cpp  trim.hpp
